@@ -1,3 +1,9 @@
+2008-08-14  kitone  <kitone@gna.org>
+
+	* src/PluginSystem.cc:
+	* src/gui/Application.cc:
+	Improve the speed accessibility of the menu at launch.
+
 2008-08-13  kitone  <kitone@gna.org>
 
 	* share/glade/dialog-check-errors-preferences.glade:
